--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="search row">
+    search bar goes here
+  </div>
   <div class="row">
     <div class="col-sm-12">
       <h1><%= @items.count %> Items</h1>
