finished building out service, and it actually returns the things I want it to, I dont think that I built the service the right way though

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -2,5 +2,7 @@
   <div class="result">
     <%= store.name  %>
     <%= store.type %>
+    <%= store.distance %>
+    <%= store.phone %>
   </div>
 <% end %>
