fixing tests and adding VCR to all of them

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,9 +1,9 @@
 <% @stores.each do |store| %>
   <div class="result">
-    <%= store.name  %>
-    <%= store.type %>
-    <%= store.distance %>
-    <%= store.phone %>
+    Name: <%= store.name  %>
+    Type: <%= store.type %>
+    Distance: <%= store.distance %>
+    Phone: <%= store.phone %>
   </div>
 <% end %>
 
